--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>FreeCRMTestAutomation</groupId>
-	<artifactId>FreeCRMTest</artifactId>
+	<groupId>PageObjectModel-master</groupId>
+	<artifactId>PageObjectModel-master</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>FreeCRMTest</name>
+	<name>PageObjectModel-master</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -104,7 +104,17 @@
 			<artifactId>extentreports</artifactId>
 			<version>2.41.2</version>
 		</dependency>
-
-
-	</dependencies>
+    </dependencies>
+    <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <fork>true</fork>
+                <executable>C:\Program Files\Java\jdk1.8.0_25\bin\javac.exe</executable>
+            </configuration>
+        </plugin>
+    </plugins>
+   </build>
 </project>
