--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>PageObjectModel-master</groupId>
 	<artifactId>PageObjectModel-master</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<packaging>jar</packaging>
 
 	<name>PageObjectModel-master</name>
@@ -13,10 +14,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-
-
-
 	<dependencies>
 
 		<dependency>
@@ -113,6 +110,16 @@
             <configuration>
                 <fork>true</fork>
                 <executable>C:\Program Files\Java\jdk1.8.0_25\bin\javac.exe</executable>
+                <suite name="FREE CRM Application Test Automation Test Suite">
+					<listeners>
+						<listener class-name="com.qa.ExtentReportListener.ExtentReporterNG" />
+					</listeners>
+					<test name="Free CRM App Test Cases">
+						<classes>
+							<class name="com.crm.qa.testcases.LoginPageTest"></class>
+						</classes>
+					</test>
+				</suite>
             </configuration>
         </plugin>
     </plugins>
